# stack_ai

./: Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  client_sdk.py  docker-compose.yml  example_sdk_usage.py  objective.md
.cursor/rules/: imports.mdc  project-objective.mdc
app/: entrypoint.sh  initialize_db.py  main.py  pyproject.toml  pytest.ini  run_test.py  run_tests.py  test.db  test_index.py
app/api/routers/: __init__.py  chunks.py  documents.py  libraries.py
app/core/: db.py
app/core/models/: __init__.py  chunk_base.py  chunk_model.py  document_model.py  library_model.py  time_base.py
app/infrastructure/indexing/: ball_tree.py  build_index.py  kd_tree.py  linear_index.py
app/infrastructure/repositories/: chunk_repository.py  document_repository.py  library_repository.py
app/scripts/: populate_db.py
app/services/: chunk_service.py  document_service.py  library_service.py
app/tests/: test_api.py  test_index.py
app/utils/: generate_schema.py  pydantic_utils.py
