[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.2.6",
    "pydantic>=2.11.5",
    "python-multipart>=0.0.20",
    "sqlalchemy-schemadisplay>=2.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
