[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.15.0",
    "faker>=37.3.0",
    "fastapi>=0.115.12",
    "numpy>=2.2.6",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=4.1.0",
    "sqlalchemy-schemadisplay>=2.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
